[package]
name = "launch-control"
version = "0.1.0"
edition = "2021"
description = "Cross-platform native app automation for Rust. Launch, focus, control, and capture output from GUI applications programmatically."
license = "MIT"
repository = "https://github.com/revvy02/launch-control"

[dependencies]
keyboard-types = "0.7"
parent-exit = { path = "../../parent-exit" }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSURL", "NSError", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "block2"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }
