[package]
name = "launch-control"
version = "0.1.0"
edition = "2021"
description = "Cross-platform native app automation for Rust. Launch, focus, control, and capture output from GUI applications programmatically."
license = "MIT"
repository = "https://github.com/revvy02/launch-control"

[dependencies]
keyboard-types = "0.7"
parent-exit = { path = "../../parent-exit" }
tokio = { version = "1", default-features = false, features = ["rt"], optional = true }
tracing = "0.1"

[features]
default = []
# When enabled, `Child::on_exit` captures the calling thread's Tokio runtime
# handle at registration time and dispatches the callback through it.
# Eliminates the foot-gun of `tokio::spawn(...)` panicking inside an
# `on_exit` callback — that callback fires from `parent-exit`'s OS-event
# thread (kqueue / waitpid / WaitForSingleObject), which has no Tokio
# runtime context. Without this feature, the callback runs on the OS-event
# thread; with it, the callback is dispatched onto the Tokio runtime that
# was current at registration.
tokio = ["dep:tokio"]

# Helper binary that holds the launched app's pty FDs in a separate process
# so the app can survive the calling process's death (`Command::detached(true)`).
# Consumers must deploy this binary alongside their executable; launch-control
# resolves it via `LAUNCH_CONTROL_BIN` env or sibling-of-current-exe.
[[bin]]
name = "launch-control"
path = "src/bin/launch-control.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSURL", "NSError", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "block2"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
] }
